# dantetimesync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TARGETS.md  codecov.yml  install.ps1  install.sh  setup.sh  uninstall.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  controller.rs  lib.rs  main.rs  net.rs  net_pcap.rs  net_winsock.rs  ntp.rs  rtc.rs  servo.rs  spike_filter.rs  status.rs  traits.rs
src/clock/: linux.rs  windows.rs
tests/: simulation_e2e.rs
