[package]
name = "dantetimesync"
version = "1.0.11"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
socket2 = "0.5"
pnet_datalink = "0.34"
byteorder = "1.5"
uuid = { version = "1.0", features = ["v4"] }
rsntp = "4.0"
chrono = "0.4"
ctrlc = "3.4"
nix = { version = "0.27", features = ["socket", "net", "uio", "fs", "ioctl"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_Media",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"