[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
socket2 = "0.5"
if-addrs = "0.10"
byteorder = "1.5"
uuid = { version = "1.0", features = ["v4"] }
rsntp = "4.0"
chrono = "0.4"
ctrlc = "3.4"
nix = { version = "0.27", features = ["socket", "net", "uio", "fs", "ioctl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "dantesync"
version = "1.8.0"
edition = "2021"
description = "High-precision PTP synchronization for Dante Audio networks"
license = "MIT"
repository = "https://github.com/zbynekdrlik/dantesync"
keywords = ["ptp", "dante", "audio", "synchronization", "time"]
categories = ["network-programming"]
rust-version = "1.70"

[profile.release]
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_Media",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_Performance",
    "Win32_System_IO",
] }
windows-service = "0.7"
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
tray-icon = "0.14"
winit = "0.29"
winrt-notification = "0.5"  # Windows toast notifications
pcap = "2.2"  # Npcap for Windows packet capture with precise timestamps
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }  # HTTP client for version check

[target.'cfg(unix)'.dependencies]
libc = "0.2"
sd-notify = "0.4"

[dev-dependencies]
mockall = "0.12"
rand = "0.9.2"
tempfile = "3.10"

[[bin]]
name = "dantesync"
path = "src/main.rs"

[[bin]]
name = "dantesync-tray"
path = "src/bin/tray.rs"

[[bin]]
name = "clocktest"
path = "src/bin/clocktest.rs"

[[bin]]
name = "timetest"
path = "src/bin/timetest.rs"

[[bin]]
name = "recvtest"
path = "src/bin/recvtest.rs"

[[bin]]
name = "ptplog"
path = "src/bin/ptplog.rs"
